image scraping works once db is populated

--- a/public/angular/views/matchup.html
+++ b/public/angular/views/matchup.html
@@ -1,10 +1,10 @@
 <div id="matchup">
 	<div class="row">
 		<div class="card movie col s5" id="movieA" ng-click="newmatchup($event)">
-			{{movieA.title}}<hr/>{{movieA.score}}
+			{{movieA.title}}<hr/>{{movieA.score}}<hr/><img src={{movieA.imgUrl}} />
 		</div>
 		<div class="card movie col s5" id="movieB" ng-click="newmatchup($event)">
-			{{movieB.title}}<hr/>{{movieB.score}}
+			{{movieB.title}}<hr/>{{movieB.score}}<hr /><img src={{movieB.imgUrl}} />
 		</div>
 	</div>
 
