new actors get all image urls into db

--- a/public/angular/views/matchup.html
+++ b/public/angular/views/matchup.html
@@ -7,5 +7,7 @@
 			{{movieB.title}}<hr/>{{movieB.score}}<hr /><img src={{movieB.imgUrl}} />
 		</div>
 	</div>
+	<button ng-click="queryActor()" id="testButton">match him up in the CAGE</button>
+	<input ng-model="newId" id="query" placeholder="Actor's IMDB id">
 
 </div>
