--- a/public/angular/views/matchup.html
+++ b/public/angular/views/matchup.html
@@ -1,9 +1,9 @@
 <div id="matchup" ng-controller="MatchupController">
 	<div class="row">
-		<div class="card movie col s5" id="movieA" ng-click="newmatchup($event)">
+		<div class="card movie col s5" id="movieA" ng-click="newmatchup(movieA)">
 			{{movieA.title}}<hr/>{{movieA.score}}<hr/><img ng-show="movieA.imgUrl" src={{movieA.imgUrl}} />
 		</div>
-		<div class="card movie col s5" id="movieB" ng-click="newmatchup($event)">
+		<div class="card movie col s5" id="movieB" ng-click="newmatchup(movieB)">
 			{{movieB.title}}<hr/>{{movieB.score}}<hr /><img ng-show="movieB.imgUrl" src={{movieB.imgUrl}} />
 		</div>
 	</div>
