actor save bugFix

--- a/public/angular/views/actorList.html
+++ b/public/angular/views/actorList.html
@@ -1,7 +1,7 @@
 <div ng-controller="ActorController">
 	<ul class="collection">
 		<li ng-repeat="actor in actors" class="collection-item">
-			{{actor.imdbId}}
+			{{actor.name}}
 		</li>
 	</ul>
 </div>
