--- a/public/angular/views/matchup.html
+++ b/public/angular/views/matchup.html
@@ -1,5 +1,5 @@
 <div id="matchup" ng-controller="MatchupController">
-	<div class="row">
+	<div>
 		<div class="card movie col s5" id="movieA" ng-click="newmatchup(movieA)">
 			{{movieA.title}}<hr/>{{movieA.score}}<hr/><img ng-show="movieA.imgUrl" src={{movieA.imgUrl}} />
 		</div>
