draw route complete. hovering logs data

--- a/public/angular/views/matchup.html
+++ b/public/angular/views/matchup.html
@@ -7,7 +7,7 @@
 			{{movieB.title}}<hr/>{{movieB.score}}<hr /><img ng-show="movieB.imgUrl" src={{movieB.imgUrl}} />
 		</div>
 	</div>
-	<button ng-click="neither(movieA, movieB)"
+	<button ng-click="neither(movieA, movieB)">Both of these are awful!</button>
 	<button ng-click="queryActor()" id="testButton">match him up in the CAGE</button>
 	<input ng-model="newId" id="query" placeholder="Actor's IMDB id">
 
