--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,11 +3,22 @@
 }
 .movie {
 	border: 1px solid black;
-	width: 300px;
-	height: 600px;
+	width: 400px;
+	height: 300px;
 }
 .matchupView {
 	width: 650px;
+}
+
+.bordered {
+	border : 2px solid black;
+}
+img {
+	width : 50%;
+	height : auto;
+}
+#container {
+	padding-top: 20px;
 }
 /*
 .ranking {
