gets actor name

--- a/public/angular/views/matchup.html
+++ b/public/angular/views/matchup.html
@@ -1,8 +1,7 @@
 <div id="matchup" ng-controller="MatchupController">
-	<button ng-click="queryActor()" id="testButton">match him up in the CAGE</button>
-	<input ng-model="newId" id="query" placeholder="search">
+	<h1>{{currentActor}}</h1>
 	<button ng-click="neither(movieA, movieB)">Both of these are awful!</button>
-	<div>
+	<div class="matchupContainer">
 		<div class="card movie col s5" id="movieA" ng-click="newmatchup(movieA)">
 			{{movieA.title}}<hr/>{{movieA.score | number : 0}}<hr/><img ng-show="movieA.imgUrl" src={{movieA.imgUrl}} />
 		</div>
@@ -10,5 +9,7 @@
 			{{movieB.title}}<hr/>{{movieB.score | number : 0}}<hr /><img ng-show="movieB.imgUrl" src={{movieB.imgUrl}} />
 		</div>
 	</div>
+	<input ng-model="newId" id="query" placeholder="search">
+	<button ng-click="queryActor()" id="testButton">Throw him in the CAGE</button>
 
 </div>
