name shows up above rankings

--- a/public/angular/views/rankingsView.html
+++ b/public/angular/views/rankingsView.html
@@ -1,3 +1,4 @@
 <div ng-controller="RankingsController">
+	<h4 style="width:400px">{{currentActor}}</h4>
 	<svg width="400" height="1500"></svg>
 </div>
