--- a/public/angular/views/actorList.html
+++ b/public/angular/views/actorList.html
@@ -1,8 +1,8 @@
 <div ng-controller="ActorController">
-	<ul class="collection actor">
-		<li ng-repeat="actor in actors" ng-click="setActor(actor)" class="collection-item">
-			<span class="title">{{actor.name}}</span>
-			<p ng-show="actor.matchupCount">Matched up {{actor.matchupCount}} times</p>
+	<ul class="collection actor striped">
+		<li ng-repeat="actor in actors" ng-click="setActor(actor)" class="collection-item" ng-class-odd="'orange lighten-4'" ng-class-even="'orange lighten-5'">
+			<h5 class="title">{{actor.name}}</h5>
+			<p ng-show="actor.matchupCount">{{actor.matchupCount}} matchups</p>
 		</li>
 	</ul>
 </div>
